--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="../project1/favicon/apple-touch-icon.png"
+      href="favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../project1/favicon/favicon-32x32.png"
+      href="favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../project1/favicon/favicon-16x16.png"
+      href="favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="../project1/favicon/site.webmanifest" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="../project1/favicon/safari-pinned-tab.svg"
+      href="favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
     <meta name="msapplication-TileColor" con tent="#da532c" />
